--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.1",
     "bcryptjs": "^2.4.3",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
