Use Supabase storage for images and consolidate env config

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ SUPERADMIN_EMAIL=admin@nhlstenden.com
 SUPERADMIN_PASSWORD=neuro2025
 REACT_APP_SUPERADMIN_EMAIL=admin@nhlstenden.com
 REACT_APP_SUPERADMIN_PASSWORD=neuro2025
+REACT_APP_SUPABASE_URL=https://rgyukpzginlyihyijbfk.supabase.co
+REACT_APP_SUPABASE_ANON_KEY=
+REACT_APP_SUPABASE_BUCKET=hon
